--- a/Portfolio.html
+++ b/Portfolio.html
@@ -230,8 +230,8 @@
   <h1 class="Border">Contact Me</h1>
   <div class="row">
   <div class="col">
-  <p><i class="fa fa-send" style="font-size:15px;color:red;"></i>yashasvishukla8597@gmail.com</p>
-  <p ><i class="fa fa-phone" style="font-size:15px;color:red;"></i>6393626042</p>
+  <p><i class="fa fa-send" style="font-size:15px;color:red;"></i>tdfhdjhdshg8597@gmail.com</p>
+  <p ><i class="fa fa-phone" style="font-size:15px;color:red;"></i>1234567890</p>
    
     </div>
     
